src/main/resources/azure/scripts/selenium-node-firefox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-node-firefox
  labels:
    app: selenium-node-firefox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-node-firefox
  template:
    metadata:
      labels:
        app: selenium-node-firefox
    spec:
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
      containers:
      - name: selenium-node-firefox
        image: selenium/node-firefox-debug:3.141
        ports:
        - containerPort: 5900
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
        resources:
          requests:
            cpu: 250m
            memory: 500Mi
          limits:
            memory: 1000Mi
            cpu: 500
