src/main/resources/azure/scripts/selenium-hub-service.yaml
#
# selenium-hub-service.yaml
#
apiVersion: v1
kind: Service
metadata:
  name: selenium-service
spec:
  type: LoadBalancer
  selector:
    k8s-app: selenium-hub
  ports:
  - port: 30001
    targetPort: 4444

# http://52.152.243.68:30001/grid/console
