src/main/resources/azure/scripts/ingress.yaml
#
# ingress.yaml
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: selenium-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: selenium.46b399436d2b440caf49.eastus.aksapp.io
      http:
        paths:
          - path: /
            backend:
              serviceName: selenium-hub-service
              servicePort: http
